package dev.ted.tddgame.domain;

@Deprecated // use Player event instead
public interface CardDiscarded {
    Card card();
}
